--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,7 +286,7 @@ figure {
   height: 100%;
 }
 #fixed {
-  background-image: url('../img/Aces-team.png');
+  background-image: url('../img/ACES-team.png');
   position: fixed;
   display: block;
   top: 0;
