--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,10 +82,6 @@ html, body {
   border: 1px solid #045D57;
 }
 
-#li:hover {
-  background-color: #fff;
-}
-
 .jumbotron {
   padding: 1rem;
   border-radius: 0;
@@ -133,12 +129,17 @@ html, body {
   margin: 1rem;
 }
 
-.fun {
+.affiliation {
   width: 100%;
   margin-bottom: 2rem;
 }
 
-.gif {
+.affiliation:hover {
+  background-color: #00887C;
+  border: 1px solid #00887C;
+}
+
+.logo {
   max-width: 100%;
 }
 
